Tweaking icon size on front page. Fixing header spacing for one of the breakpoints too.

--- a/theme/ElectionData-V2/style.css
+++ b/theme/ElectionData-V2/style.css
@@ -405,7 +405,6 @@ p.news-article-notice{
 
 @media all and (max-width: 959px) {
 	header {
-		padding-top: 1em;
 		height: 100px; }
 	header h1 {
 		font-size: 36px;}
@@ -1058,7 +1057,7 @@ input:-ms-input-placeholder {
 	margin:0 3.5%;}
 .page-list ul li img{
 	width:auto;
-	height:90px;}
+	height:100px;}
 .head-title{
 	text-align: center;
     margin-bottom: 50px;
